add quotation marks around frontmatter description

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-description: An introduction to Hîsyêô: a constructed language and culture focused on egalitarian, humanitarian, and environmentalist values. Learn about its design principles and origins.
+description: "An introduction to Hîsyêô: a constructed language and culture focused on egalitarian, humanitarian, and environmentalist values. Learn about its design principles and origins."
 ---
 
 import Tabs from '@theme/Tabs';
