--- a/docs/language/orthography.mdx
+++ b/docs/language/orthography.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-description: Explore the writing systems of Hîsyêô, including the Latin alphabet with diacritics, the Hîskonû abugida, and the Hîsyokûî syllabary.
+description: "Explore the writing systems of Hîsyêô, including the Latin alphabet with diacritics, the Hîskonû abugida, and the Hîsyokûî syllabary."
 ---
 
 import Tabs from '@theme/Tabs';
