--- a/docs/language/punctuation.mdx
+++ b/docs/language/punctuation.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 7
-description: Learn the rules of punctuation in Hîsyêô, including sentence terminators, pauses, and how punctuation dictates the prosody of speech.
+description: "Learn the rules of punctuation in Hîsyêô, including sentence terminators, pauses, and how punctuation dictates the prosody of speech."
 ---
 
 import Tabs from '@theme/Tabs';
