--- a/docs/language/questions.mdx
+++ b/docs/language/questions.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 6
-description: Understand how to ask and answer questions in Hîsyêô, covering polar questions, propositive questions, and pro-form questions.
+description: "Understand how to ask and answer questions in Hîsyêô, covering polar questions, propositive questions, and pro-form questions."
 ---
 
 import Tabs from '@theme/Tabs';
