--- a/docs/language/sentences.mdx
+++ b/docs/language/sentences.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 5
-description: Dive into Hîsyêô sentence structure, examining morphosyntactics, constituent order, null constituents, and different sentence types.
+description: "Dive into Hîsyêô sentence structure, examining morphosyntactics, constituent order, null constituents, and different sentence types."
 ---
 
 import Tabs from '@theme/Tabs';
