--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-description: Start your journey with Hîsyêô. Learn about its nature as a world and art language, common expressions, and basic pronunciation.
+description: "Start your journey with Hîsyêô. Learn about its nature as a world and art language, common expressions, and basic pronunciation."
 ---
 
 import Tabs from '@theme/Tabs';
