--- a/docs/lessons/getting-directions.mdx
+++ b/docs/lessons/getting-directions.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 10
-description: Navigate the world in Hîsyêô. Learn vocabulary for travel, directions, landmarks, distance, and public transportation.
+description: "Navigate the world in Hîsyêô. Learn vocabulary for travel, directions, landmarks, distance, and public transportation."
 ---
 
 import Tabs from '@theme/Tabs';
