--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 5
-description: Learn to discuss your home and origin in Hîsyêô, including vocabulary for housing, cities, regions, and countries.
+description: "Learn to discuss your home and origin in Hîsyêô, including vocabulary for housing, cities, regions, and countries."
 ---
 
 import Tabs from '@theme/Tabs';
