--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-description: A comprehensive lesson on numbers, dates, and time in Hîsyêô. Learn to count, tell time, and navigate the calendar.
+description: "A comprehensive lesson on numbers, dates, and time in Hîsyêô. Learn to count, tell time, and navigate the calendar."
 ---
 
 import Tabs from '@theme/Tabs';
