--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 7
-description: Delve into Hîsyêô religion and holidays. Learn about the 'technology of culture', the pantheon of Liberators, and the Calendar of the Weave.
+description: "Delve into Hîsyêô religion and holidays. Learn about the 'technology of culture', the pantheon of Liberators, and the Calendar of the Weave."
 ---
 
 import Tabs from '@theme/Tabs';
