--- a/docs/lessons/time-for-some-fun.mdx
+++ b/docs/lessons/time-for-some-fun.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 11
-description: Discuss leisure and entertainment in Hîsyêô. Learn vocabulary for music, dancing, movies, social drinking, and parties.
+description: "Discuss leisure and entertainment in Hîsyêô. Learn vocabulary for music, dancing, movies, social drinking, and parties."
 ---
 
 import Tabs from '@theme/Tabs';
