--- a/docs/lessons/trips-and-tours.mdx
+++ b/docs/lessons/trips-and-tours.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 13
-description: Vocabulary for trips and tours in Hîsyêô. Covers air travel, cultural respect, visiting museums, and staying in hotels.
+description: "Vocabulary for trips and tours in Hîsyêô. Covers air travel, cultural respect, visiting museums, and staying in hotels."
 ---
 
 import Tabs from '@theme/Tabs';
