--- a/docs/religion/beliefs.mdx
+++ b/docs/religion/beliefs.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-description: Explore the core beliefs and virtues of the Hîsyêô faith, focusing on freedom, solidarity, and the rejection of domination.
+description: "Explore the core beliefs and virtues of the Hîsyêô faith, focusing on freedom, solidarity, and the rejection of domination."
 ---
 
 import Tabs from '@theme/Tabs';
