--- a/docs/religion/gods/hûlicîn.mdx
+++ b/docs/religion/gods/hûlicîn.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 10
-description: Meet Hûlicîn, the Hîsyêô god of Entropy and Serendipity. Discover the value of chaos, wandering, and embracing the unexpected.
+description: "Meet Hûlicîn, the Hîsyêô god of Entropy and Serendipity. Discover the value of chaos, wandering, and embracing the unexpected."
 ---
 
 import Tabs from '@theme/Tabs';
