--- a/docs/religion/gods/suluswutî.mdx
+++ b/docs/religion/gods/suluswutî.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-description: Meet Suluswutî, the Hîsyêô god of Learning and Questioning. Explore the sacred duty of inquiry, documentation, and challenging dogma.
+description: "Meet Suluswutî, the Hîsyêô god of Learning and Questioning. Explore the sacred duty of inquiry, documentation, and challenging dogma."
 ---
 
 import Tabs from '@theme/Tabs';
