--- a/docs/religion/gods/wicnû.mdx
+++ b/docs/religion/gods/wicnû.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 8
-description: Meet Wicnû, the Hîsyêô god of Balance and Mediation. Understand the principles of restorative justice and reconciling conflict.
+description: "Meet Wicnû, the Hîsyêô god of Balance and Mediation. Understand the principles of restorative justice and reconciling conflict."
 ---
 
 import Tabs from '@theme/Tabs';
