--- a/docs/religion/gods/xôcibîlî.mdx
+++ b/docs/religion/gods/xôcibîlî.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 9
-description: Meet Xôcibîlî, the Hîsyêô god of Identity and Beauty. Explore the importance of self-expression, introspection, and sovereign individuality.
+description: "Meet Xôcibîlî, the Hîsyêô god of Identity and Beauty. Explore the importance of self-expression, introspection, and sovereign individuality."
 ---
 
 import Tabs from '@theme/Tabs';
