--- a/docs/religion/metaphysics.mdx
+++ b/docs/religion/metaphysics.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 6
-description: Dive deep into Hîsyêô metaphysics. Explore the concepts of Unity and Multiplicity, the Divine Mind, the Cosmic Soul, and the nature of reality.
+description: "Dive deep into Hîsyêô metaphysics. Explore the concepts of Unity and Multiplicity, the Divine Mind, the Cosmic Soul, and the nature of reality."
 ---
 
 import Tabs from '@theme/Tabs';
