--- a/docs/religion/practices.mdx
+++ b/docs/religion/practices.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 5
-description: A guide to the daily practices and rituals of Hîsyêô religion, including chants, oaths, prayers, and the consecration of shrines.
+description: "A guide to the daily practices and rituals of Hîsyêô religion, including chants, oaths, prayers, and the consecration of shrines."
 ---
 
 import Tabs from '@theme/Tabs';
