--- a/docs/religion/shattering.mdx
+++ b/docs/religion/shattering.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-description: Read the foundational myth of the Shattering, where the gods broke the stagnant unity of the First Law to create a universe of free will and multiplicity.
+description: "Read the foundational myth of the Shattering, where the gods broke the stagnant unity of the First Law to create a universe of free will and multiplicity."
 ---
 
 import Tabs from '@theme/Tabs';
