--- a/docs/sciences/mathematics.mdx
+++ b/docs/sciences/mathematics.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 13
-description: A guide to mathematical terms in Hîsyêô, covering basic operations, algebra, geometry, and descriptive polygons.
+description: "A guide to mathematical terms in Hîsyêô, covering basic operations, algebra, geometry, and descriptive polygons."
 ---
 
 import Tabs from '@theme/Tabs';
