--- a/docs/sciences/politics.mdx
+++ b/docs/sciences/politics.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 15
-description: Understand Political Science in Hîsyêô, focusing on participatory politics, systems of governance, and the vocabulary of consensus.
+description: "Understand Political Science in Hîsyêô, focusing on participatory politics, systems of governance, and the vocabulary of consensus."
 ---
 
 import Tabs from '@theme/Tabs';
