--- a/docs/sciences/psychology.mdx
+++ b/docs/sciences/psychology.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 20
-description: A guide to psychology in Hîsyêô, covering concepts of mind and emotion, mental health, trauma (Echoes), and therapeutic practices.
+description: "A guide to psychology in Hîsyêô, covering concepts of mind and emotion, mental health, trauma (Echoes), and therapeutic practices."
 ---
 
 import Tabs from '@theme/Tabs';
