--- a/docs/sciences/sociology.mdx
+++ b/docs/sciences/sociology.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 21
-description: Explore sociological terms in Hîsyêô, including social structures, community dynamics, and the analysis of hierarchy and culture.
+description: "Explore sociological terms in Hîsyêô, including social structures, community dynamics, and the analysis of hierarchy and culture."
 ---
 
 import Tabs from '@theme/Tabs';
