--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 4
-description: A dictionary of Hîsyêô compounds translating the core vocabulary of the Mini language.
+description: "A dictionary of Hîsyêô compounds translating the core vocabulary of the Mini language."
 ---
 
 import Tabs from '@theme/Tabs';
