--- a/docs/works/north-wind-and-the-sun.mdx
+++ b/docs/works/north-wind-and-the-sun.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-description: A Hîsyêô translation of Aesop's fable 'The North Wind and the Sun'.
+description: "A Hîsyêô translation of Aesop's fable 'The North Wind and the Sun'."
 ---
 
 import Tabs from '@theme/Tabs';
