--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-description: A Hîsyêô translation of Hans Christian Andersen's story 'The Wicked Prince'.
+description: "A Hîsyêô translation of Hans Christian Andersen's story 'The Wicked Prince'."
 ---
 
 import HisyeoTabs from '@site/src/components/HisyeoTabs'
