--- a/docs/language/word_types/interjections.mdx
+++ b/docs/language/word_types/interjections.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-description: A guide to Hîsyêô interjections, covering primary words like 'bîolî', secondary usages of other words, and common tertiary phrases.
+description: "A guide to Hîsyêô interjections, covering primary words like 'bîolî', secondary usages of other words, and common tertiary phrases."
 ---
 
 import Tabs from '@theme/Tabs';
