--- a/docs/sciences/physics.mdx
+++ b/docs/sciences/physics.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 23
-description: Dive into physics terminology in Hîsyêô, covering classical mechanics, thermodynamics, electromagnetism, and quantum mechanics.
+description: "Dive into physics terminology in Hîsyêô, covering classical mechanics, thermodynamics, electromagnetism, and quantum mechanics."
 ---
 
 import Tabs from '@theme/Tabs';
