fix for programming

--- a/docs/sciences/technology.mdx
+++ b/docs/sciences/technology.mdx
@@ -41,21 +41,22 @@ This philosophy emphasizes **user agency** and **repairability**. A tool you can
 
 The digital world is viewed as a reflection of the Great Weave—a network of connection.
 
-| English         | Hîsyêô                                  | Literal Meaning                |
-|-----------------|-----------------------------------------|--------------------------------|
-| Computer        | <HisyeoText>ônî tûek</HisyeoText>       | The counting one / Calculator  |
-| Internet        | <HisyeoText>nec nucoto</HisyeoText>     | World net                      |
-| Software / Code | <HisyeoWord is='yôcno'/>                | Program / Plan                 |
-| Data            | <HisyeoText>sobis</HisyeoText>          | To record (Verb) / Data (Noun) |
-| Screen          | <HisyeoText>ônî mônîso</HisyeoText>     | The displaying one             |
-| Robot / AI      | <HisyeoText>culono dûuncît</HisyeoText> | Mind machine                   |
+| English         | Hîsyêô                                    | Literal Meaning                |
+|-----------------|-------------------------------------------|--------------------------------|
+| Computer        | <HisyeoText>ônî tûek</HisyeoText>         | The counting one / Calculator  |
+| Internet        | <HisyeoText>nec nucoto</HisyeoText>       | World net                      |
+| Software / Code | <HisyeoText>yôcno kon culono</HisyeoText> | Operating program              |
+| Data            | <HisyeoText>sobis</HisyeoText>            | To record (Verb) / Data (Noun) |
+| Screen          | <HisyeoText>ônî mônîso</HisyeoText>       | The displaying one             |
+| Robot / AI      | <HisyeoText>culono dûuncît</HisyeoText>   | Mind machine                   |
 
 ### Programming
 
-Coding is described as weaving logic (môtsilê sôhoûk).
+Coding is described as writing (<HisyeoWord is='cukto'/>).
 
-Noyo cukto wofok til xe hûkun culono.
-I write code to command the machine.
+<HisyeoTabs>
+    <p>noyo cukto sî yôcno kon culono xe oûtô ônî xîkô ôfo.&emsp;<em>I wrote the code that is flying this plane.</em></p>
+</HisyeoTabs>
 
 ## Energy & Power
 
