Fix physics translation

--- a/docs/sciences/physics.mdx
+++ b/docs/sciences/physics.mdx
@@ -83,7 +83,7 @@ The study of the very small, where the [Divine Mind](../religion/metaphysics#the
 
 <HisyeoText><strong>Quantum particles:</strong> folo yê cûtî môî&emsp;<small>(Smallest particles)</small></HisyeoText>
 
-<HisyeoText><strong>Entanglement:</strong> kon môtsilê hoôs yê folo yê cûtî môî sûn mônbili êto&emsp;<small>(Chaotic acts of tying of the smallest particles from great distances)</small></HisyeoText>
+<HisyeoText><strong>Entanglement:</strong> kon môtsilê hoôs yê folo yê cûtî môî et xe li tuluti sî lon mônbili êto&emsp;<small>(Chaotic acts of tying of the smallest particles that have traversed for great distances)</small></HisyeoText>
 
 <HisyeoTabs>
     <p>li hoôs ilik folo.&emsp;<em>There is chaos in the atom.</em></p>
