Add some more cosmology translations

--- a/docs/sciences/physics.mdx
+++ b/docs/sciences/physics.mdx
@@ -99,7 +99,11 @@ The study of the universe as a whole.
 
 <HisyeoText><strong>Galaxy:</strong> mîtmo bînton&emsp;<small>(Star colony)</small></HisyeoText>
 
- <HisyeoText><strong>Big Bang</strong> kon isbulyol yê môî&emsp;<small>(The scattering of everything)</small></HisyeoText>
+<HisyeoText><strong>Dark Matter:</strong> kûsowî dês fisun&emsp;<small>(Unknown matter)</small></HisyeoText>
+
+<HisyeoText><strong>Big Bang</strong> kon isbulyol yê môî&emsp;<small>(The scattering of everything)</small></HisyeoText>
+
+<HisyeoText><strong>Grand Unified Theory</strong> gonîso bobôun în hêfîn ûnîdû êto&emsp;<small>(Great joined understandable system thought)</small></HisyeoText>
 
 <HisyeoTabs>
     <p>môî xe ilik kôsmô socok kon dî cûtî hoî ôhêl côt côt.&emsp;<em>The universe started shrinking long long ago.</em></p>
