One more tweak on thoery

--- a/docs/sciences/physics.mdx
+++ b/docs/sciences/physics.mdx
@@ -103,7 +103,7 @@ The study of the universe as a whole.
 
 <HisyeoText><strong>Big Bang</strong> kon isbulyol yê môî&emsp;<small>(The scattering of everything)</small></HisyeoText>
 
-<HisyeoText><strong>Grand Unified Theory</strong> gonîso bobôun în hêfîn ûnîdû êto&emsp;<small>(Great joined understandable system thought)</small></HisyeoText>
+<HisyeoText><strong>Grand Unified Theory</strong> zomo yê fûtsûn et montûksol ûnîdû êto&emsp;<small>(Great joined logical group of rules)</small></HisyeoText>
 
 <HisyeoTabs>
     <p>môî xe ilik kôsmô socok kon dî cûtî hoî ôhêl côt côt.&emsp;<em>The universe started shrinking long long ago.</em></p>
