Improve phrasing of final point on ParEcon

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -121,23 +121,33 @@ dictatorship where the state tells you what you need. Hîsyêô uses a third way
 
 ---
 
-In many communal societies, you have to justify your needs to a committee or
-your neighbors, which kills individuality. Hîsyêô believes your choices are your
-own.
-- **How it works:** We use distinct credits. If you want to spend your
-  hard-earned credits on something frivolous (like a collection of vintage
-  musical instruments) you can.
-- **The Market Logic:** As long as you have earned the credits, you can acquire
-  the goods. The transaction is anonymous and guilt-free. The price tag is
-  simply adjusted to reflect the true cost to society (pollution, resource
-  scarcity), so your purchase pays its honest debt to the community.
+In intentional communities or communes, individual freedom often dies under the
+weight of social pressure. If everything is free, your neighbors might judge you
+for taking "too much" or wanting something unique. Hîsyêô solves this by
+formalizing your right to consume. We believe that true freedom isn't about
+hiding your choices; it is about having a system that explicitly validates them
+so you never have to feel ashamed of your needs.
+- **How it works:** your ability to consume is guaranteed by your contribution
+  to the plan. When you spend your credits, you aren't "taking" from the
+  community; you are redeeming a promise the community made to you. Because the
+  system handles the logistics—ensuring there is enough for everyone—you don't
+  need to ask your neighbors for permission. If your needs change, you simply
+  update your plan. The system tracks these changes not to judge you, but to
+  ensure the supply chain adjusts to meet your new reality.
+- **The Market Logic:** Money in a market acts as a "permission slip": if you
+  can pay for it, nobody can tell you no. Hîsyêô keeps this utility. The
+  combination of your work effort and your budget acts as your permission slip.
+  It transforms consumption from a moral debate into a simple, logistical
+  transaction. As long as you stay within your budget, you don't need to ask for
+  permission. You earned it, you balanced it, it's yours.
 
 :::tip Social Tyranny
 
-Readers of Ursula K. Le Guin's *The Dispossessed* will recognize this as one of
-the flaws of the anarchist world of Anarres: because there was no currency,
-consumption was regulated by shame. If you took a new pair of boots, you risked
-being judged by your neighbors for "egoizing."
+Readers of Ursula K. Le Guin's *The Dispossessed* will recognize that this is an
+attempt to solve the problem of "egoizing." On the planet Anarres, there was no
+currency, so consumption was regulated by shame and social tyranny. By keeping a
+formal accounting system (credits and planning), Hîsyêô protects the individual
+from the tyranny of the group.
 
 :::
 
