Change from "god" to "archetype"

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -60,7 +60,7 @@ give us the gifts of consciousness, agency, and feeling.
 ### Tîengûun
 <small>(from the Chinese diety, 天公 tiāngōng)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Tîengûun xe li ôtsôtot yê zomî&emsp;<em>Tîengûun, the God of Society</em></p>
+    <p>ôtsôtot Tîengûun xe li ôtsôtot yê zomî&emsp;<em>Tîengûun, the Archetype of Society</em></p>
 </HisyeoTabs>
 
 The First Law was a unity of force, not of will. Tîengûun's contribution to the
@@ -91,7 +91,7 @@ management for the good of all. Learn more about Tîengûun
 ### Unonsî
 <small>(from the Akan diety, Anansi)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Unonsî xe li ôtsôtot yê kuûnmê&emsp;<em>Unonsî, the God of Technology</em></p>
+    <p>ôtsôtot Unonsî xe li ôtsôtot yê kuûnmê&emsp;<em>Unonsî, the Archetype of Technology</em></p>
 </HisyeoTabs>
 
 The First Law dictated that every object had only one purpose: to be a part of
@@ -122,7 +122,7 @@ Unonsî [here](/docs/religion/gods/unonsî).
 ### Suluswutî
 <small>(from the Hindu deity, सरस्वती sárasvatī)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Suluswutî xe li ôtsôtot yê kon bêûdo&emsp;<em>Suluswutî, the God of Learning</em></p>
+    <p>ôtsôtot Suluswutî xe li ôtsôtot yê kon bêûdo&emsp;<em>Suluswutî, the Archetype of Learning</em></p>
 </HisyeoTabs>
 
 The First Law was a single, inarguable "truth." There was no need for learning,
@@ -154,7 +154,7 @@ liberation. Learn more about Suluswutî [here](/docs/religion/gods/suluswutî).
 ### Îfêstôs
 <small>(from the Greek diety, Ἥφαιστος Hḗphaistos)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Îfêstôs xe li ôtsôtot yê kon conwêbo&emsp;<em>Îfêstôs, the God of Manufacturing </em></p>
+    <p>ôtsôtot Îfêstôs xe li ôtsôtot yê kon conwêbo&emsp;<em>Îfêstôs, the Archetype of Manufacturing </em></p>
 </HisyeoTabs>
 
 Under The First Law, nothing could be built or unmade outside of the First Law's
@@ -184,7 +184,7 @@ is fourteen syllables or seven metrical feet.
 ### Dimîtu
 <small>(from the Greek diety, Δημήτηρ Demeter)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Dimîtu xe li ôtsôtot yê bunxin bûmî&emsp;<em>Dimîtu, the God of Nature</em></p>
+    <p>ôtsôtot Dimîtu xe li ôtsôtot yê bunxin bûmî&emsp;<em>Dimîtu, the Archetype of Nature</em></p>
 </HisyeoTabs>
 
 The First Law’s "nature" was a perfectly manicured, sterile garden where nothing
@@ -214,7 +214,7 @@ to be respected and collaborated with. Learn more about Dimîtu
 ### Bostet
 <small>(from the Egyptian diety, bꜣstt Bastet)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Bostet xe li ôtsôtot yê hondon&emsp;<em>Bostet, the God of Family</em></p>
+    <p>ôtsôtot Bostet xe li ôtsôtot yê hondon&emsp;<em>Bostet, the Archetype of Family</em></p>
 </HisyeoTabs>
 
 The First Law knew no individuals, only components. There was no love, grief, or
@@ -244,7 +244,7 @@ those lines alone. Learn more about Bostet [here](/docs/religion/gods/bostet).
 
 ### Kulîôbî
 ôtsôtot Kulîôbî xe li ôtsôtot yê foko sunyotnî
-Kulîôbî, the God of Entertainment *(from the Greek deity, Κᾰλλῐόπη Kăllĭópē)*
+Kulîôbî, the Archetype of Entertainment *(from the Greek deity, Κᾰλλῐόπη Kăllĭópē)*
 
 Life under The First Law was utterly without joy. Its purpose was function, not
 feeling. Kulîôbî’s rebellion was the first *Laugh*. It was a spontaneous,
@@ -271,7 +271,7 @@ is to celebrate freedom itself. Learn more about Kulîôbî
 
 ### Wicnû
 ôtsôtot Wicnû xe li ôtsôtot yê ûsowo
-Wicnû, the God of Balance *(from the Hindu diety, विष्णु Vishnu).*
+Wicnû, the Archetype of Balance *(from the Hindu diety, विष्णु Vishnu).*
 
 When the First Law was shattered, the raw force of the impact created not just
 the Shards (the impulse to dominate), but also Echoes (the pain, trauma, and
@@ -300,7 +300,7 @@ who have harmed you, and to build justice together. Learn more about Wicnû
 ### Xôcibîlî
 <small>(from the Aztec diety, Xōchipilli)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Xôcibîlî xe li ôtsôtot yê hofîn&emsp;<em>Xôcibîlî, the God of Beauty</em></p>
+    <p>ôtsôtot Xôcibîlî xe li ôtsôtot yê hofîn&emsp;<em>Xôcibîlî, the Archetype of Beauty</em></p>
 </HisyeoTabs>
 
 The First Law's greatest tyranny was its erasure of the individual; all were
@@ -330,7 +330,7 @@ free society is impossible. Learn more about Xôcibîlî
 ### Hûlicîn
 <small>(from the Chinese deity, 狐狸精 húlijīng)</small>
 <HisyeoTabs>
-    <p>ôtsôtot Hûlicîn xe li ôtsôtot yê hoôs&emsp;<em>Hûlicîn, the God of Entropy</em></p>
+    <p>ôtsôtot Hûlicîn xe li ôtsôtot yê hoôs&emsp;<em>Hûlicîn, the Archetype of Entropy</em></p>
 </HisyeoTabs>
 
 Hûlicîn was the very first anomaly. They were the initial, inexplicable
