--- a/docs/religion/gods/hûlicîn.mdx
+++ b/docs/religion/gods/hûlicîn.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 10
-description: "Meet Hûlicîn, the Hîsyêô god of Entropy and Serendipity. Discover the value of chaos, wandering, and embracing the unexpected."
+description: "Meet Hûlicîn, the Hîsyêô archetype of Entropy and Serendipity. Discover the value of chaos, wandering, and embracing the unexpected."
 ---
 
 import Tabs from '@theme/Tabs';
@@ -36,7 +36,7 @@ Chaos, Chance, Wandering, Spontaneity, Serendipity
 
 ## Appearance
 
-Hûlicîn, the Wanderer, is a god of the road, the glitch, and the happy accident.
+Hûlicîn, the Wanderer, is a archetype of the road, the glitch, and the happy accident.
 Their appearance is, therefore, transient, contradictory, and almost impossible
 to pin down. They are most often glimpsed at the edge of things: a figure at the
 far end of a long, empty road at dusk; a face you see for only a second in a
@@ -46,7 +46,7 @@ eyes of a child, or a young adult with hands as weathered and ancient as river
 stones. Their clothes are a traveler's patchwork, but of impossible
 combinations: the salt-stained coat of a sailor over the dusty boots of a desert
 nomad, a pocket full of city transit tokens and another full of rare, wild
-seeds. Hûlicîn is the god of the dropped map and the wrong turn. Their presence
+seeds. Hûlicîn is the archetype of the dropped map and the wrong turn. Their presence
 is felt when plans go perfectly, beautifully awry. Their face, when seen, is a
 study in charming asymmetry. One eye might be a brilliant, clear blue, seeing
 all the infinite possibilities, while the other is a deep, earthy brown, seeing
