--- a/docs/religion/gods/kulîôbî.mdx
+++ b/docs/religion/gods/kulîôbî.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 7
-description: "Meet Kulîôbî, the Hîsyêô god of Joy and Play. Learn how entertainment, art, and competition serve as acts of liberation."
+description: "Meet Kulîôbî, the Hîsyêô archetype of Joy and Play. Learn how entertainment, art, and competition serve as acts of liberation."
 ---
 
 import Tabs from '@theme/Tabs';
