--- a/docs/religion/gods/suluswutî.mdx
+++ b/docs/religion/gods/suluswutî.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 3
-description: "Meet Suluswutî, the Hîsyêô god of Learning and Questioning. Explore the sacred duty of inquiry, documentation, and challenging dogma."
+description: "Meet Suluswutî, the Hîsyêô archetype of Learning and Questioning. Explore the sacred duty of inquiry, documentation, and challenging dogma."
 ---
 
 import Tabs from '@theme/Tabs';
@@ -70,7 +70,7 @@ are a figure in the stacks of a library at midnight, a flickering presence on a
 late-night broadcast, a shadow in a darkroom, or a reflection on a computer
 screen in the moments before a difficult truth is written. To see Suluswutî
 clearly would be to render them an idol, to give knowledge a final, static form.
-And that is the one thing this god of endless questioning will never allow.
+And that is the one thing this archetype of endless questioning will never allow.
 
 ## Manifestations
 They can be found in getting stuck in a book, a freshly whiped
