--- a/docs/religion/gods/unonsî.mdx
+++ b/docs/religion/gods/unonsî.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-description: "Meet Unonsî, the Hîsyêô god of Technology and Potential. Discover the philosophy of the lever, open knowledge, and resilient systems."
+description: "Meet Unonsî, the Hîsyêô archetype of Technology and Potential. Discover the philosophy of the lever, open knowledge, and resilient systems."
 ---
 
 import Tabs from '@theme/Tabs';
