--- a/docs/sciences/technology.mdx
+++ b/docs/sciences/technology.mdx
@@ -12,7 +12,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Technology
 
-Technology is the study of <HisyeoWord is='kuûnmê'/> (machinery/tech) and the application of <HisyeoWord is='yôn'/> (tools). In Hîsyêô, technology is the domain of [Unonsî](../religion/gods/unonsî), the god of potentiality and invention.
+Technology is the study of <HisyeoWord is='kuûnmê'/> (machinery/tech) and the application of <HisyeoWord is='yôn'/> (tools). In Hîsyêô, technology is the domain of [Unonsî](../religion/gods/unonsî), the archetype of potentiality and invention.
 
 ## Core Concepts
 
